--- a/react-app/src/components/Watchlist/watchlist.css
+++ b/react-app/src/components/Watchlist/watchlist.css
@@ -188,6 +188,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 900px;
 
 }
 
